--- a/Application/Home/View/Index/login.html
+++ b/Application/Home/View/Index/login.html
@@ -5,65 +5,57 @@
     <title>邮件处理系统登录</title>
     <link rel="stylesheet" href="__ROOT__/Public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="__ROOT__/Public/css/login.css"/>
+    <link rel="stylesheet" href="__ROOT__/Public/css/component.css"/>
+    <link rel="stylesheet" href="__ROOT__/Public/css/buttons.css"/>
     <script type="text/javascript" src="__ROOT__/Public/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/login.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/bootstrap.min.js"></script>
-
-
-
+    <script type="text/javascript" src="__ROOT__/Public/js/classie.js"></script>
+    
 </head>
 
-<body background="__ROOT__/Public/images/background.png">
-    <div class="head-body">
-    </div>
+
+<body >
+
     <div class="row main-body">
-        <div class="col-md-4">
+        <div>
+            <img class="logo" src="__ROOT__/Public/images/logo-notext.png">
         </div>
-        <div class="col-md-4 login-box">
+        <div class="col-md-4 col-md-offset-4 login-box content" style="margin-top:17%">
             <form class="form-horizontal" action="__URL__/checkLogin" method="post" id="loginInfo">
-                <div class="form-gruop">
-                    <img class="logo" >
-                </div>
                 <div class="form-group">
                     <label class="col-md-1"></label>
-                    <div class="col-md-10">
-                        <div class="input-box ">
-                            <span class="glyphicon glyphicon-user " style="color:#ADADAD;margin-right:5px; "></span>
-                            <input type="email" class="input " id="username"  name="account"  style="width:240px" placeholder="用户名" >
-                        </div>
+                    <div class="col-md-10 ">
+                        <span class="input input--hoshi" >
+                            <input autocomplete="off" name="account" class="input__field input__field--hoshi" type="text" id="input-1" style="border:0" />
+                            <label class="input__label input__label--hoshi input__label--hoshi-color-2">
+                                <span class="input__label-content input__label-content--hoshi">用户名</span>
+                            </label>
+                        </span>
                         <div style="height:25px">
                         <p id="verify-username" style="display: none; color:#FF0000">用户名不能为空</p>
                         </div>
                     </div>
                     <label class="col-md-1"></label>
-
                 </div>
-
                 <div class="form-group">
                     <label class="col-sm-1"></label>
                     <div class="col-sm-10">
-                        <div class="input-box">
-                            <span class="glyphicon glyphicon-lock" style="color:#ADADAD;margin-right:5px;"></span>
-                            <input  type="password" class="input" name="password" id="password"  style="width:240px;" placeholder="密码">
-                        </div>
+                        <span class="input input--hoshi ">
+                        <input autocomplete="off" name="password" class="input__field input__field--hoshi" type="password" id="input-2" />
+                        <label class="input__label input__label--hoshi input__label--hoshi-color-2" for="input-4">
+                            <span class="input__label-content input__label-content--hoshi">密码</span>
+                        </label>
+                    </span>
                         <div style="height:25px">
                             <p id="verify-password" style="display: none; color:#FF0000">密码不能为空</p>
                         </div>
                     </div>
                     <label class="col-sm-1"></label>
                 </div>
-                <div style="height:15px"></div>
                 <div class="form-group row">
-                    <label class="col-sm-1"></label>
-                    <div class="col-sm-6">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> 记住密码
-                            </label>
-                        </div>
-                    </div>
-                    <div class=" col-sm-5">
-                        <button type="button" class="col-md-9 btn login-btn" data-loading-text="登录中..." >登录</button>
+                    <div class="col-sm-7 col-sm-offset-2 " style="text-align:center">
+                        <button class="button button--rayen button--border-thin button--text-thick button--text-upper button--size-s" data-text="登录" style="border:1px solid #ccc;color:#666"><span>登录</span></button>
                     </div>
                 </div>
                 <label class="col-sm-1"></label>
@@ -72,5 +64,47 @@
         <div class="col-md-4">
         </div>
     </div>
+    <script>
+            (function() {
+                // trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
+                if (!String.prototype.trim) {
+                    (function() {
+                        // Make sure we trim BOM and NBSP
+                        var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+                        String.prototype.trim = function() {
+                            return this.replace(rtrim, '');
+                        };
+                    })();
+                }
+
+                [].slice.call( document.querySelectorAll( 'input.input__field' ) ).forEach( function( inputEl ) {
+                    // in case the input is already filled..
+                    if( inputEl.value.trim() !== '' ) {
+                        classie.add( inputEl.parentNode, 'input--filled' );
+                    }
+
+                    // events:
+                    inputEl.addEventListener( 'focus', onInputFocus );
+                    inputEl.addEventListener( 'blur', onInputBlur );
+                } );
+
+                function onInputFocus( ev ) {
+                    classie.add( ev.target.parentNode, 'input--filled' );
+                }
+
+                function onInputBlur( ev ) {
+                    if( ev.target.value.trim() === '' ) {
+                        classie.remove( ev.target.parentNode, 'input--filled' );
+                    }
+                }
+            })();
+        </script>
+        <script>
+            $(document).ready(function(){
+                $("#input-1").val("");
+                $("#input-2").val("");
+            });
+        </script>
 </body>
+
 </html>
