--- a/Application/Home/View/Index/table.html
+++ b/Application/Home/View/Index/table.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <title>邮件处理系统</title>
     <link rel="stylesheet" href="__ROOT__/Public/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="__ROOT__/Public/css/bootstrap-datetimepicker.css" />
     <link rel="stylesheet" href="__ROOT__/Public/css/base.css"/>
     <link rel="stylesheet" href="__ROOT__/Public/css/table.css"/>
     <script type="text/javascript" src="__ROOT__/Public/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/table.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/base.js"></script>
+    <script type="text/javascript" src="__ROOT__/Public/js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="__ROOT__/Public/js/bootstrap-datetimepicker.zh-CN.js"></script>
+
 
 
 </head>
 <body>
 <!--弹窗选择分发给的人-->
 
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" style="">
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="mymodal"  style="">
     <div class="modal-dialog ">
         <div class="modal-content" id="content">
 
@@ -46,11 +50,28 @@
                     </div>
                     <br style="clear:both;" />
                 </div>
+                <div class="modal-footer">
+                    <div class="col-md-5">
+                        <p><input type="text" placeholder="输入新标签" style="width:100px;font-size:12px;margin-top:5px;float:left" id="userLabel"/>
+                            <input type="button" class="btn btn-primary" style="font-size:12px;" value="添加标签" onclick="changeLabel()"/></p>
+                        <input type="hidden" value="__APP__/Home/Index/changeLabel" id="url" /><!--向js传入路径-->
 
+                        <p><label style="float:left;margin-top:5px">选择标签</label>
+                            <select style="width:100px;margin-top:5px;margin-left:5px" id="labelSelect" name="labelSelect">
+                                <option value="0">不使用标签</option>
+                                <volist name="label" id="item">
+                                    <option value="{$item.id}">{$item.name}</option>
+                                </volist>
+                            </select>
+                        </p>
+                    </div>
+                    <div>处理期限:<input type="text" name="deadline"/></div>
                 <div class="modal-footer">
                     <input type="submit" class="btn btn-primary">
                 </div>
+                </div>
             </form>
+
         </div>
     </div>
 </div>
@@ -58,91 +79,72 @@
 
 
 <include file="Public:base"/>
-<div class ="main-body"   >
+
+<div class="col-md-10 col-md-offset-2 email-box ">
     <input type="hidden" id="role_id_hidden" value="{$_SESSION['roleId']}"/>
-
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-10 email-box ">
-            <div class="button-group  row">
-                <span id="emailListURL" hidden>__APP__/Home/EmailList/</span>
-                <div class="btn-group  col-md-8" role="group" aria-label="...">
-                    <button type="button" class="btn btn-default">删除</button>
-                    <button type="button" class="btn btn-default">举报</button>
-                    <button type="button" class="btn btn-default">刷新</button>
-                    <button type="button" class="btn btn-default"  data-toggle="modal" data-target=".bs-example-modal-lg" onclick="transferEmailId()">分发</button>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            标记为
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">已读邮件</a></li>
-                            <li><a href="#">未读邮件</a></li>
-                        </ul>
-                    </div>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            移动到
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">已发送</a></li>
-                            <li><a href="#">已删除</a></li>
-                            <li><a href="#">草稿箱</a></li>
-                        </ul>
-                    </div>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            标签
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">重要</a></li>
-                            <li><a href="#">很重要</a></li>
-                            <li><a href="#">一点都不重要</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 page">
-                    <div class="btn-group " role="group" aria-label="...">
-                        <button type="button" class="btn btn-default" onclick="prepage()">上一页</button>
-                        <button type="button" class="btn btn-default" onclick="nextpage()">下一页</button>
-                        <!--<button class="button-circle"><span class="glyphicon glyphicon-arrow-left"></span></button>-->
-                        <!--<button class="button-circle"><span class="glyphicon glyphicon-arrow-right"></span></button>-->
-                    </div>
-
-                </div>
-
-
-            </div>
-            <div class="mail-table  well-sm">
-                <table class="table table-hover table-striped">
-                    <thead>
-                    <tr class="row">
-                        <th  class="col-md-1"></th>
-                        <th  class="col-md-2">标签</th>
-                        <th  class="col-md-2">发件人</th>
-                        <th class="col-md-5" >主题</th>
-                        <th class="col-md-2" >时间</th>
-                    </tr>
-                    </thead>
-                    <tbody id="alist">
-
-                    </tbody>
-                </table>
-            </div>
-            <div class="row">
-                <div class="col-md-5"></div>
-                <div class="btn-group col-md-2" role="group" aria-label="...">
-                    <button type="button" class="btn btn-default" onclick="prepage()">上一页</button>
-                    <button type="button" id="nextpage" data-value="1" class="btn btn-default" onclick="nextpage()">下一页</button>
-                </div>
-                <div class="col-md-5"></div>
-            </div>
-
-
-        </div>
+    <span id="emailListURL" hidden>__APP__/Home/EmailList/</span>
+    <div class="email-box-head" style="width:100%;height:125px;">
+        <div style="height:50px;"></div>
+        <ul class="button-group">
+            <li class="fun-button" id="refresh"><a  href='#'class="fun-a" >刷新</a><span class="fun-line"></span></li>
+            <li class="fun-button" {:level(17)}><a href='#'class="fun-a" style="color:#66ff00">|</a></li>
+            <li class="fun-button" {:level(17)}><a href='#'class="fun-a"  onclick="transferEmailId()">分发</a><span class="fun-line"></span></li>
+        </ul>
     </div>
+    <div class="email-box-body" style="width:100% ;">
+        <table class="table table-hover table-striped"style="table-layout:fixed;">
+            <thead>
+            <tr class="row">
+                <th  class="col-md-1"></th>
+                <th  class="col-md-2">标签</th>
+                <th  class="col-md-3">发件人</th>
+                <th class="col-md-5" >主题</th>
+                <th class="col-md-2" >时间</th>
+            </tr>
+            </thead>
+            <tbody id="alist">
+
+            </tbody>
+        </table>
+        <div class="row">
+            <ul class="col-md-offset-5 col-md-3 button-group" style="text-align: center">
+                <li class="fun-button" style="margin-left: auto; margin-right: auto;" >
+                    <a class="fun-icon"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                    <a href='javascript:void(0);'class="fun-a" style="font-size:15px;"onclick="prepage()">上一页</a><span class="fun-line"></span>
+                </li>
+                <li class="fun-button" >
+                    <a href='javascript:void(0);'class="fun-a" style="font-size:15px;" onclick="nextpage()">下一页</a>
+                    <a class="fun-icon"><span class="glyphicon glyphicon-chevron-right"></span></a><span class="fun-line"></span>
+
+                </li>
+            </ul>
+        </div>
+
+    </div>
+</div>
+<script type="text/javascript">
+    function changeLabel(){
+        var name=document.getElementById("userLabel").value;
+        var url=document.getElementById("url").value;
+        if (name==''){
+            alert("请输入标签名称！");
+        }else{
+            var qarams={
+                name:name
+            };
+            $.post(url,qarams,function(answer){
+                var i;
+                var obj=document.getElementById('labelSelect');
+                obj.options.length=0;
+                for (i=0;i<=answer.length;i++){
+                    obj.options.add(new Option(answer[i]['name'],answer[i]['name']));
+                }
+            },'json');
+        }
+    }
+
+
+</script>
 </body>
+
 </html>
