--- a/Application/Home/View/User/add.html
+++ b/Application/Home/View/User/add.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+<include file="Public:userbase"/>
 <div class="col-md-2 sidebar">
     <ul class="navContainer">
         <li  class="logo"><a href="__URL__/manager" style="text-decoration: none">后台管理系统</a></li>
