--- a/Application/Home/View/User/set.html
+++ b/Application/Home/View/User/set.html
@@ -4,78 +4,68 @@
     <meta charset="UTF-8">
     <title>后台管理系统</title>
     <link rel="stylesheet" href="__ROOT__/Public/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="__ROOT__/Public/css/kkkk.css"/>
+    <link rel="stylesheet" href="__ROOT__/Public/css/base.css"/>
     <script type="text/javascript" src="__ROOT__/Public/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="__ROOT__/Public/js/base.js"></script>
     <script type="text/javascript" src="__ROOT__/Public/js/safe.js"></script>
 </head>
 <body>
-<div class="col-md-2 sidebar">
-    <ul class="navContainer">
-        <li  class="logo"><a href="__URL__/manager" style="text-decoration: none">后台管理系统</a></li>
-        <li class="normal" ><a href="__URL__/manager" style="text-decoration: none">员工列表</a></li>
-        <li  class="normal" ><a href="__URL__/mailSet" style="text-decoration: none">邮箱设置</a></li>
-    </ul>
-</div>
-<div class="head-body" >
-    <div class="rightHead">
-        <div class="right">
-            <a href="#">反馈建议</a> | <a href="__APP__/Home/Index/logout">退出</a>
-        </div>
-        <div class="input-box">
-            <input class="input"id="usernamea">
-            <button class="search-btn"><span class="glyphicon glyphicon-search"></span></button>
+
+<include file="Public:userbase"/>
+
+<div class="col-md-10 col-md-offset-2 email-box ">
+
+    <div class="email-box-head" style="width:100%;height:125px;">
+        <div style="height:50px;"></div>
+        <div class="button-group" role="group" aria-label="...">
+            <li class="fun-button"><a href="set.html" class="fun-a">常规</a><span class="fun-line"></span></li>
         </div>
     </div>
-    <div class="leftHead">
-        <p><b id="username">用户名 </b><<span id="userAddress">123456@mail.com</span>><p>
-        <a href="#">邮箱首页</a> | <a href="#">设置</a>
-    </div>
+    <form id="mailAccount" method="post" action="__APP__/Home/User/updateInfo">
 
-</div>
+        <div class="input-group">
+            <span class="input-group-addon" >企业邮箱地址</span>
+            <input name="emailAddress" placeholder="" value="{$mailAccount.emailaddress}" type="text" style="width:220px" class="form-control" aria-describedby="sizing-addon2">
+        </div><br>
+        <div class="input-group">
+            <span class="input-group-addon">邮箱昵称</span>
+            <input name="emailName" type="text" style="width:220px" value="{$mailAccount.emailname}" class="form-control" aria-describedby="sizing-addon2">
+        </div><br>
+        <div class="input-group">
+            <span class="input-group-addon" >pop3服务器</span>
+            <input name="popserver" type="text" style="width:220px" value="{$mailAccount.pop3server}" class="form-control" aria-describedby="sizing-addon2">
+        </div><br>
+        <div class="input-group">
+            <span class="input-group-addon">stmp服务器</span>
+            <input name="stmpserver" type="text" style="width:220px" value="{$mailAccount.stmpserver}" class="form-control" aria-describedby="sizing-addon2">
+        </div><br>
+        <div class="input-group">
+            <span class="input-group-addon">邮箱账户</span>
+            <input name="user" type="text" style="width:220px" value="{$mailAccount.emailusername}" class="form-control" aria-describedby="sizing-addon2">
+        </div><br>
 
-<div class ="main-body"   >
-
-    <div class="">
-        <div class="col-md-2">
+        <div class="input-group">
+            <span class="input-group-addon">账户密码</span>
+            <input name="pwd" type="text" style="width:220px" value="{$mailAccount.emailpassword}" class="form-control" aria-describedby="sizing-addon2">
         </div>
-        <div class="col-md-10 email-box " >
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="#">常规</a></li>
-                <li role="presentation"><a href="safe.html">安全</a></li>
+        <br>
+        <div class="input-group">
+            <span class="input-group-addon">收信时间</span>
+            <input name="receiveday" type="text" style="width:220px" value="{$mailAccount.receiveday}" class="form-control" aria-describedby="sizing-addon2">
+        </div>
+        <br>
+        <nav>
+            <ul class="pager">
+                <li><a id="saveMailAccountButton" type="button">保存</a></li>
+                <li><a href="manager.html">返回</a></li>
             </ul>
-            <br>
-            <br>
-            <div class="input-group">
-                <span class="input-group-addon" id="sizing-addon2">邮箱昵称</span>
-                <input type="text" style="width:220px" class="form-control" aria-describedby="sizing-addon2">
-            </div>
-                <br>
-            <div class="input-group">
-                <span style="width:40px" class="input-group-addon" id="sizing-addon2">签名</span>
-            </div>
-            <textarea  style="width:600px"class="form-control" rows="3" >
-            </textarea>
-            <br>
-            <div class="input-group">
-                <span style="width:40px" class="input-group-addon" id="sizing-addon2">自动回复</span>
-            </div>
-            <textarea  style="width:600px"class="form-control" rows="3" >
-            </textarea>
-            <span style="width:15px">
-             <P>是否使用<input type="checkbox" aria-label="..."></P>
-            </span>
-            <nav>
-                <ul class="pager">
-                    <li><a href="#">保存</a></li>
-                    <li><a href="manager.html">返回</a></li>
-                </ul>
-            </nav>
-        </div>
+        </nav>
+    </form>
 
 
 
-    </div>
+
 </div>
 </body>
 </html>
