--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -1,49 +1,28 @@
 body{
     font-family: "Microsoft YaHei","微软雅黑","宋体",Arial,Verdana,sans-serif;
 }
-.head-body{
-    height:200px;
+.main-body{
+    width: 100%;
 }
-
+.logo{
+    height: 320px;
+    width: 400px;
+    position: absolute;
+    top:0%;
+    left:35%;
+}
+.form-group{
+    margin-bottom: 0 !important;
+}
 .main-body .login-box{
     min-height: 20px;
     padding: 30px;
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-}
-.main-body .input-box{
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-}
-.main-body .input-box:hover{
-    border-color:#2aabd2;
-}
-.main-body .input-box .input{
-    outline:none;
-    border:0;
-}
-
-.main-body .logo{
-    height:80px;
+    background-color: none;
+    border: 0;
 }
 .main-body .login-btn{
-    background:#ff8000;
-    color:#fff;
+}
 
-
+input:-webkit-autofill{
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
